--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "dotenv>=0.9.9",
     "fastapi>=0.123.0",
+    "openai>=2.8.1",
+    "pandas>=2.3.3",
     "pydantic>=2.12.5",
     "pydantic-ai>=1.25.1",
     "uvicorn>=0.38.0",
