--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "dotenv>=0.9.9",
     "fastapi>=0.123.0",
     "openai>=2.8.1",
+    "oracledb>=3.4.1",
     "pandas>=2.3.3",
     "pydantic>=2.12.5",
     "pydantic-ai>=1.25.1",
