--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,5 +12,6 @@ dependencies = [
     "pandas>=2.3.3",
     "pydantic>=2.12.5",
     "pydantic-ai>=1.25.1",
+    "stripe>=14.0.1",
     "uvicorn>=0.38.0",
 ]
